syntax = "proto3";

package sum;

option go_package = "calculator/proto";

message SumRequest {
    int64 x = 1;
    int64 y = 2;
}

message SumResponse {
    int64 result = 1;
}

message PrimesRequest {
    int64 number = 1;
}

message PrimesResponse {
    int64 result = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse);

    rpc Primes(PrimesRequest) returns (stream PrimesResponse);
}
